[package]
name = "gkosgrep"
version = "0.1.1"
authors = ["Daniel Hilst Selli <danielhilst@gmail.com>"]
edition = "2018"
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/dhilst/gkosgrep"
homepage = "https://github.com/dhilst/gkosgrep"
keywords = ["grep"]
description = "A simple grep clone for developers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "*"
regex = "1"
content_inspector = "*"
glob = "*"
