[package]
name = "gkosgrep"
version = "0.1.10"
authors = ["Daniel Hilst Selli <danielhilst@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dhilst/gkosgrep"
homepage = "https://github.com/dhilst/gkosgrep"
keywords = ["grep"]
description = "A simple grep clone for developers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0"
log = "0.4"
env_logger = "0.*"
num_cpus = "1.*"
threadpool = "1.*"
